feat: implement TS 119 612 signature profile
